--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:starter": "node dist/starter/server/server.mjs"
+    "serve:ssr:starter": "node dist/starter/server/server.mjs",
+    "format": "prettier --write ."
   },
   "prettier": {
     "printWidth": 100,
@@ -19,6 +20,9 @@
           "parser": "angular"
         }
       }
+    ],
+    "plugins": [
+      "prettier-plugin-organize-imports"
     ]
   },
   "private": true,
@@ -43,6 +47,8 @@
     "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
     "jsdom": "^27.1.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-organize-imports": "^4.3.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
   }
