--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "@angular/platform-server": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.0",
+    "@fontsource/nunito": "^5.2.7",
+    "@fontsource/source-code-pro": "^5.2.7",
+    "@material-symbols/font-500": "^0.39.4",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
