--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "target": "ES2022",
-    "module": "preserve"
+    "module": "preserve",
+    "paths": {
+      "ng-zealous/*": ["./projects/ng-zealous/*/index.ts"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
@@ -23,11 +26,10 @@
   },
   "files": [],
   "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.spec.json"
-    }
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.spec.json" },
+
+    { "path": "./projects/ng-zealous/tsconfig.lib.json" },
+    { "path": "./projects/ng-zealous/tsconfig.spec.json" }
   ]
 }
