--- a/package.json
+++ b/package.json
@@ -34,14 +34,19 @@
     "@angular/core": "^21.0.0",
     "@angular/forms": "^21.0.0",
     "@angular/material": "21.0.0",
+    "@angular/material-date-fns-adapter": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/platform-server": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.0",
     "@fontsource/nunito": "^5.2.7",
     "@fontsource/source-code-pro": "^5.2.7",
+    "@highlightjs/cdn-assets": "^11.11.1",
     "@material-symbols/font-500": "^0.39.4",
+    "date-fns": "^4.1.0",
     "express": "^5.1.0",
+    "highlight.js": "^11.11.1",
+    "marked": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
