Use modules in app

--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
               }
             ],
             "styles": ["src/styles.scss"],
+            "scripts": ["node_modules/@highlightjs/cdn-assets/highlight.min.js"],
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
