--- a/angular.json
+++ b/angular.json
@@ -129,6 +129,78 @@
           }
         }
       }
+    },
+    "ng-zealous-docs": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss",
+          "viewEncapsulation": "None"
+        }
+      },
+      "root": "projects/ng-zealous-docs",
+      "sourceRoot": "projects/ng-zealous-docs/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular/build:application",
+          "options": {
+            "browser": "projects/ng-zealous-docs/src/main.ts",
+            "tsConfig": "projects/ng-zealous-docs/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "projects/ng-zealous-docs/public"
+              }
+            ],
+            "styles": ["projects/ng-zealous-docs/src/styles.scss"],
+            "server": "projects/ng-zealous-docs/src/main.server.ts",
+            "outputMode": "server",
+            "ssr": {
+              "entry": "projects/ng-zealous-docs/src/server.ts"
+            }
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular/build:dev-server",
+          "configurations": {
+            "production": {
+              "buildTarget": "ng-zealous-docs:build:production"
+            },
+            "development": {
+              "buildTarget": "ng-zealous-docs:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "test": {
+          "builder": "@angular/build:unit-test"
+        }
+      }
     }
   }
 }
