--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,6 @@
               }
             ],
             "styles": ["src/styles.scss"],
-            "scripts": ["node_modules/@highlightjs/cdn-assets/highlight.min.js"],
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
@@ -57,7 +56,8 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "scripts": ["node_modules/axe-core/axe.min.js"]
             }
           },
           "defaultConfiguration": "production"
@@ -155,7 +155,10 @@
               }
             ],
             "styles": ["projects/ng-zealous-docs/src/styles.scss"],
-            "scripts": ["node_modules/@highlightjs/cdn-assets/highlight.min.js"],
+            "scripts": [
+              "node_modules/@highlightjs/cdn-assets/highlight.min.js",
+              "node_modules/axe-core/axe.min.js"
+            ],
             "server": "projects/ng-zealous-docs/src/main.server.ts",
             "outputMode": "server",
             "ssr": {
