--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@fontsource/source-code-pro": "^5.2.7",
     "@highlightjs/cdn-assets": "^11.11.1",
     "@material-symbols/font-500": "^0.39.4",
+    "axe-core": "^4.11.0",
     "date-fns": "^4.1.0",
     "express": "^5.1.0",
     "highlight.js": "^11.11.1",
