--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
   "private": true,
   "packageManager": "pnpm@10.20.0",
   "dependencies": {
-    "@angular/cdk": "21.0.0",
+    "@angular/aria": "^21.0.0",
+    "@angular/cdk": "^21.0.0",
     "@angular/common": "^21.0.0",
     "@angular/compiler": "^21.0.0",
     "@angular/core": "^21.0.0",
     "@angular/forms": "^21.0.0",
-    "@angular/material": "21.0.0",
+    "@angular/material": "^21.0.0",
     "@angular/material-date-fns-adapter": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/platform-server": "^21.0.0",
@@ -57,7 +58,7 @@
     "@angular/build": "^21.0.0",
     "@angular/cli": "^21.0.0",
     "@angular/compiler-cli": "^21.0.0",
-    "@angular/localize": "21.0.0",
+    "@angular/localize": "^21.0.0",
     "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
     "jsdom": "^27.1.0",
