Add .md doc for avatar

--- a/projects/ng-zealous-docs/tsconfig.app.json
+++ b/projects/ng-zealous-docs/tsconfig.app.json
@@ -4,7 +4,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/app",
-    "types": ["node", "@angular/localize"]
+    "types": ["node", "@angular/localize", "./@types/index.d.ts"]
   },
   "include": ["src/**/*.ts"],
   "exclude": ["src/**/*.spec.ts"]
