--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,23 +26,13 @@
   },
   "files": [],
   "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/ng-zealous/tsconfig.lib.json"
-    },
-    {
-      "path": "./projects/ng-zealous/tsconfig.spec.json"
-    },
-    {
-      "path": "./projects/ng-zealous-docs/tsconfig.app.json"
-    },
-    {
-      "path": "./projects/ng-zealous-docs/tsconfig.spec.json"
-    }
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.spec.json" },
+
+    { "path": "./projects/ng-zealous/tsconfig.lib.json" },
+    { "path": "./projects/ng-zealous/tsconfig.spec.json" },
+
+    { "path": "./projects/ng-zealous-docs/tsconfig.app.json" },
+    { "path": "./projects/ng-zealous-docs/tsconfig.spec.json" }
   ]
 }
